[package]
name = "lorentz_vector"
version = "0.1.0"
authors = ["Torsten Weber <tweber@physik.rwth-aachen.de>"]
license = "MIT/Apache-2.0"
description = "A library to work with four-vectors"
keywords = ["physics", "vector", "lorentz", "four"]
categories = ["science"]

[dependencies]
serde = { version = "1.0.27", optional = true, features = ["derive"] }
